# Centralidad-de-Redes

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.bat  comprension_problema.md
Entrega1/: compilar.bat  main.aux  main.blg  main.out  main.tex  main.toc
Entrega1/secciones/: bibliografia.tex  complejidad.tex  conclusiones.tex  datasets.tex  experimentos.tex  introduccion.tex  metricas.tex  portada.tex
data/dataset2/: 2000.net  2005.net  2010.net  2015.net  2018.net
results/csv/: trade.csv  yeast.csv
scripts/: plot_results.py
src/: main.cpp
src/experiments/: EdgeExperiment.cpp  EdgeExperiment.h  ExperimentRunner.cpp  ExperimentRunner.h
src/graph/: Graph.cpp  Graph.h
src/metrics/: AverageShortestPath.cpp  AverageShortestPath.h  BetweennessCentrality.cpp  BetweennessCentrality.h  ClosenessCentrality.cpp  ClosenessCentrality.h  ClusteringCoefficient.cpp  ClusteringCoefficient.h  DegreeCentrality.cpp  DegreeCentrality.h  EigenvectorCentrality.cpp  EigenvectorCentrality.h  IMetric.h  PageRank.cpp  PageRank.h
src/parsers/: EdgeListParser.cpp  EdgeListParser.h  IParser.h  PajekParser.cpp  PajekParser.h
src/utils/: BFS.h  ProgressBar.h  Stats.h  Timer.h
tests/: test_graph.cpp  test_metrics.cpp
utils/: BFS.h  Stats.h
